// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
-     style=\\"padding: 8px;\\"
+     class=\\"MuiGrid-container-3 StandardPage\\"
+   >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-307\\"
+     >
+       Request a correction, add more information or upload files
+     </h2>
+     <div
+       class=\\"MuiGrid-item-4 Page-layoutCard-306\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-314 MuiPaper-elevation1-317 MuiPaper-rounded-315 MuiCard-root-313 Cards-card-308 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-341\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-344\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-345\\"
+                   >
+                     Work to be amended
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-347\\"
+               >
+                 <div
+                   class=\\"publicationCitation\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-container-3\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           style=\\"min-width: 1px;\\"
+                         >
+                           <h6
+                             class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-349\\"
+                           >
+                             <a
+                               href=\\"/view/UQ:41878\\"
+                             >
+                               Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
+                             </a>
+                           </h6>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-350\\"
+                         >
+                           <div
+                             class=\\"citationContent citationJournalArticle\\"
+                           >
+                             <span
+                               class=\\"citationAuthors\\"
+                             >
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 He, Y., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Brown, M. A., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Rothnagel, J. A., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Saunders, N. A.
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                  and Smith, R.
+                               </span>
+                                
+                             </span>
+                             <span
+                               class=\\"citationDate\\"
+                             >
+                               (2004).
+                             </span>
+                             <span
+                               class=\\"citationTitle\\"
+                             >
+                                Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth.
+                             </span>
+                             <span
+                               class=\\"citationJournalName\\"
+                             >
+                                Molecular Biology of The Cell 
+                             </span>
+                             <span
+                               class=\\"citationVolumeNumber\\"
+                             >
+                                15 
+                             </span>
+                             <span
+                               class=\\"citationIssueNumber empty\\"
+                             />
+                             <span
+                               class=\\"citationPageRange\\"
+                             >
+                               <span
+                                 class=\\"citationStartPage\\"
+                               >
+                                 252A
+                               </span>
+                               -
+                               <span
+                                 class=\\"citationEndPage\\"
+                               >
+                                 253A
+                               </span>
+                             </span>
+                             <span>
+                               . 
+                             </span>
+                             <span
+                               class=\\"citationDOI empty\\"
+                             />
+                           </div>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-center-11\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30 PublicationCitation-citationCounts-351\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                                 >
+                                   <a
+                                     aria-label=\\"Full citation in Web of science will open in a new window\\"
+                                     class=\\"wosCitationCount CitationCountView-citationCount-356 ExternalLink-externalLink-358\\"
+                                     href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000224648802120&SrcAuth=uqueensland\\"
+                                     rel=\\"noopener noreferrer\\"
+                                     tabindex=\\"0\\"
+                                     target=\\"_blank\\"
+                                     theme=\\"[object Object]\\"
+                                     title=\\"Full citation in Web of science will open in a new window\\"
+                                   >
+                                     <span
+                                       class=\\"fez-icon wos large\\"
+                                     />
+                                     <span
+                                       class=\\"CitationCountView-citationCountNumber-357\\"
+                                     >
+                                       2
+                                     </span>
+                                   </a>
+                                   <a
+                                     aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                                     class=\\"googleCitationCount CitationCountView-citationCount-356 ExternalLink-externalLink-358\\"
+                                     href=\\"https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth\\"
+                                     rel=\\"noopener noreferrer\\"
+                                     tabindex=\\"0\\"
+                                     target=\\"_blank\\"
+                                     theme=\\"[object Object]\\"
+                                     title=\\"Full citation in Google scholar will open in a new window\\"
+                                   >
+                                     <span
+                                       class=\\"fez-icon google large\\"
+                                     />
+                                   </a>
+                                   <span
+                                     class=\\"noOaIcon\\"
+                                   />
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4\\"
+                                 >
+                                   <a
+                                     class=\\"CitationCounts-statsLink-355 ExternalLink-externalLink-358\\"
+                                     href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:41878\\"
+                                     rel=\\"noopener noreferrer\\"
+                                     tabindex=\\"0\\"
+                                     target=\\"_blank\\"
+                                     theme=\\"[object Object]\\"
+                                     title=\\"Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth\\"
+                                   >
+                                     <svg
+                                       aria-hidden=\\"true\\"
+                                       class=\\"MuiSvgIcon-root-362 ExternalLink-externalLinkIcon-359\\"
+                                       focusable=\\"false\\"
+                                       role=\\"presentation\\"
+                                       viewBox=\\"0 0 24 24\\"
+                                     >
+                                       <path
+                                         d=\\"M0 0h24v24H0z\\"
+                                         fill=\\"none\\"
+                                       />
+                                       <path
+                                         d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                       />
+                                     </svg>
+                                     View full statistics
+                                   </a>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                                 />
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                   <hr
+                     class=\\"MuiDivider-root-371 PublicationCitation-divider-348\\"
+                   />
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <span
+                       class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                     >
+                       <span
+                         class=\\"PublicationCitation-contentIndicatorTitle-353\\"
+                       >
+                         Content Indicators:
+                       </span>
+                       Scholarship of Teaching and Learning, Protocol
+                     </span>
+                   </div>
+                 </div>
+                 <div
+                   class=\\"MuiFormControl-root-376\\"
+                   style=\\"width: 100%;\\"
+                 >
+                   <label
+                     class=\\"MuiFormLabel-root-391 MuiFormLabel-error-394 MuiInputLabel-error-383 MuiFormLabel-required-396 MuiInputLabel-required-384 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388\\"
+                     data-shrink=\\"false\\"
+                     id=\\"Select an action-label\\"
+                   >
+                     Select an action
+                     <span
+                       class=\\"MuiFormLabel-asterisk-397 MuiFormLabel-error-394 MuiInputLabel-error-383\\"
                      >
+                        *
+                     </span>
+                   </label>
                    <div
-       class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                     class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-error-424 MuiInput-error-410 MuiInputBase-formControl-419 MuiInput-formControl-406\\"
+                     label=\\"Select an action\\"
+                     required=\\"\\"
                    >
                      <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+                       class=\\"MuiSelect-root-398\\"
                      >
                        <div
-           class=\\"MuiCircularProgress-root-296 MuiCircularProgress-colorPrimary-299 MuiCircularProgress-indeterminate-298\\"
-           role=\\"progressbar\\"
-           style=\\"width: 18px; height: 18px;\\"
+                         aria-haspopup=\\"true\\"
+                         aria-pressed=\\"false\\"
+                         class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
+                         id=\\"fixAction\\"
+                         role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
+                         <span>
+                           ​
+                         </span>
+                       </div>
+                       <input
+                         aria-labelledby=\\"Select an action-label\\"
+                         id=\\"Select an action\\"
+                         name=\\"fixAction\\"
+                         type=\\"hidden\\"
+                         value=\\"\\"
+                       />
                        <svg
-             class=\\"MuiCircularProgress-svg-301\\"
-             viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-362 MuiSelect-icon-404\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M7 10l5 5 5-5z\\"
+                         />
+                       </svg>
+                     </div>
+                   </div>
+                   <p
+                     class=\\"MuiFormHelperText-root-468 MuiFormHelperText-error-469 MuiFormHelperText-required-475\\"
+                   >
+                     This field is required
+                   </p>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
              >
-             <circle
-               class=\\"MuiCircularProgress-circle-302 MuiCircularProgress-circleIndeterminate-304\\"
-               cx=\\"44\\"
-               cy=\\"44\\"
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-491 Alert-common-483\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-484 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-362 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-               r=\\"21\\"
-               stroke-width=\\"2\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
                          />
                        </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-485 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul />
+                       </span>
                      </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
            >
+             <button
+               class=\\"MuiButtonBase-root-465 MuiButton-root-439 MuiButton-contained-450 MuiButton-raised-453 MuiButton-fullWidth-464\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
                <span
-           class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-           style=\\"font-size: 1.33rem;\\"
+                 class=\\"MuiButton-label-440\\"
                >
-           Loading work
+                 Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-476\\"
+               />
+             </button>
            </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`FixRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -278,11 +278,12 @@
                      <div
                        class=\\"MuiSelect-root-398\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-pressed=\\"false\\"
+                         aria-owns=\\"menu-fixAction\\"
+                         aria-pressed=\\"true\\"
                          class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >"
`;

exports[`FixRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -257,48 +257,45 @@
                  <div
                    class=\\"MuiFormControl-root-376\\"
                    style=\\"width: 100%;\\"
                  >
                    <label
-                     class=\\"MuiFormLabel-root-391 MuiFormLabel-error-394 MuiInputLabel-error-383 MuiFormLabel-required-396 MuiInputLabel-required-384 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388\\"
-                     data-shrink=\\"false\\"
+                     class=\\"MuiFormLabel-root-391 MuiFormLabel-filled-395 MuiFormLabel-required-396 MuiInputLabel-required-384 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388 MuiInputLabel-shrink-387\\"
+                     data-shrink=\\"true\\"
                      id=\\"Select an action-label\\"
                    >
                      Select an action
                      <span
-                       class=\\"MuiFormLabel-asterisk-397 MuiFormLabel-error-394 MuiInputLabel-error-383\\"
+                       class=\\"MuiFormLabel-asterisk-397\\"
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-error-424 MuiInput-error-410 MuiInputBase-formControl-419 MuiInput-formControl-406\\"
+                     class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-formControl-419 MuiInput-formControl-406\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-398\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-owns=\\"menu-fixAction\\"
-                         aria-pressed=\\"true\\"
+                         aria-pressed=\\"false\\"
                          class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >
-                         <span>
-                           ​
-                         </span>
+                         I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
                          id=\\"Select an action\\"
                          name=\\"fixAction\\"
                          type=\\"hidden\\"
-                         value=\\"\\"
+                         value=\\"fix\\"
                        />
                        <svg
                          aria-hidden=\\"true\\"
                          class=\\"MuiSvgIcon-root-362 MuiSelect-icon-404\\"
                          focusable=\\"false\\"
@@ -307,21 +304,365 @@
                        >
                          <path
                            d=\\"M7 10l5 5 5-5z\\"
                          />
                        </svg>
+                     </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-314 MuiPaper-elevation1-317 MuiPaper-rounded-315 MuiCard-root-313 Cards-card-308 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-341\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-344\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-345\\"
+                   >
+                     Content Indicators
+                   </h3>
                  </div>
+                 <div
+                   class=\\"MuiCardHeader-action-343\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-465 MuiIconButton-root-541\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-546\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-362 HelpIcon-helpIcon-532\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
+                       </svg>
+                     </span>
+                     <span
+                       class=\\"MuiTouchRipple-root-476\\"
+                     />
+                   </button>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-347\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
                      <p
-                     class=\\"MuiFormHelperText-root-468 MuiFormHelperText-error-469 MuiFormHelperText-required-475\\"
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
                    >
-                     This field is required
+                     <div
+                       class=\\"MuiFormControl-root-376 MuiFormControl-fullWidth-379\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-391 MuiFormLabel-filled-395 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388 MuiInputLabel-shrink-387\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-formControl-419 MuiInput-formControl-406\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-398\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-362 MuiSelect-icon-404\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-314 MuiPaper-elevation1-317 MuiPaper-rounded-315 MuiCard-root-313 Cards-card-308 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-341\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-344\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-345\\"
+                   >
+                     Suggest a correction
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-347\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-376 MuiFormControl-fullWidth-379\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-391 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                         id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                       >
+                         Describe the problem with this record, eg record is a duplicate, or suggested changes
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-fullWidth-427 MuiInput-fullWidth-412 MuiInputBase-formControl-419 MuiInput-formControl-406 MuiInputBase-multiline-426 MuiInput-multiline-411\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                           class=\\"MuiInputBase-input-428 MuiInput-input-413 MuiInputBase-inputMultiline-430 MuiInput-inputMultiline-415\\"
+                           id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                           label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-376 MuiFormControl-fullWidth-379\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-391 MuiInputLabel-root-380 MuiInputLabel-formControl-385 MuiInputLabel-animated-388\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-418 MuiInput-root-405 MuiInput-underline-409 MuiInputBase-fullWidth-427 MuiInput-fullWidth-412 MuiInputBase-formControl-419 MuiInput-formControl-406\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-428 MuiInput-input-413\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-314 MuiPaper-elevation1-317 MuiPaper-rounded-315 MuiCard-root-313 Cards-card-308 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-341\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-344\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-345\\"
+                   >
+                     Upload files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-347\\"
+               >
+                 <div>
+                   Upload an Open Access file, HERDC evidence or an NTRO Research Statement
+                 </div>
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <p
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                     >
+                       You may add up to 10 files (max 8GB each)
                      </p>
+                     <div
+                       class=\\"MuiGrid-container-3\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                       >
+                         <div
+                           id=\\"FileUploadDropZone\\"
+                           tabindex=\\"0\\"
+                         >
+                           <div
+                             aria-disabled=\\"false\\"
+                             class=\\"\\"
+                             style=\\"position: relative; padding: 0px;\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-549\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                               >
+                                 <p
+                                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-550\\"
+                                 >
+                                   File upload restrictions
+                                 </p>
+                                 <div>
+                                   Please ensure your files:
+                                   <ul>
+                                     <li>
+                                       begin with a letter and are less than 45 characters long
+                                     </li>
+                                     <li>
+                                       contain only upper and lowercase alphanumeric characters, and underscores
+                                     </li>
+                                     <li>
+                                       have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                     </li>
+                                     <li>
+                                       two periods are allowed for multipart zip files. Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                     </li>
+                                     <li>
+                                       are uploaded individually and not inside a folder
+                                     </li>
+                                   </ul>
+                                 </div>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-551\\"
+                                 >
+                                   <div
+                                     class=\\"MuiGrid-item-4\\"
+                                   >
+                                     <svg
+                                       aria-hidden=\\"true\\"
+                                       class=\\"MuiSvgIcon-root-362 FileUploadDropzoneStaticContent-cloudIcon-552\\"
+                                       focusable=\\"false\\"
+                                       role=\\"presentation\\"
+                                       viewBox=\\"0 0 24 24\\"
+                                     >
+                                       <path
+                                         d=\\"M0 0h24v24H0z\\"
+                                         fill=\\"none\\"
+                                       />
+                                       <path
+                                         d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                       />
+                                     </svg>
                                    </div>
+                                   <div
+                                     class=\\"MuiGrid-item-4\\"
+                                   >
+                                     <p>
+                                       Click here to select files, or drag files into this area to upload
+                                     </p>
+                                   </div>
+                                 </div>
+                               </div>
+                             </div>
+                             <input
+                               aria-label=\\"Upload files\\"
+                               autocomplete=\\"off\\"
+                               id=\\"Uploader\\"
+                               multiple=\\"\\"
+                               style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                               type=\\"file\\"
+                             />
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
+           </div>
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"Alert\\"
@@ -361,11 +702,15 @@
                        <b>
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul />
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
@@ -392,10 +737,27 @@
                  Cancel
                </span>
                <span
                  class=\\"MuiTouchRipple-root-476\\"
                />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-465 MuiButtonBase-disabled-466 MuiButton-root-439 MuiButton-contained-450 MuiButton-containedPrimary-451 MuiButton-raised-453 MuiButton-raisedPrimary-454 MuiButton-disabled-459 MuiButton-fullWidth-464\\"
+               disabled=\\"\\"
+               id=\\"fixSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-440\\"
+               >
+                 Submit
+               </span>
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -402,11 +402,12 @@
                          <div
                            class=\\"MuiSelect-root-398\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`FixRecord form should allow content indicators to be selected 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -409,16 +409,16 @@
                              class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-362 MuiSelect-icon-404\\"
                              focusable=\\"false\\"
@@ -660,67 +660,12 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-491 Alert-common-483\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-4 Alert-icon-484 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-362 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
          </div>
          <div
-                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-485 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             Please provide additional information, corrections or upload file(s).
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -744,21 +689,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-465 MuiButtonBase-disabled-466 MuiButton-root-439 MuiButton-contained-450 MuiButton-containedPrimary-451 MuiButton-raised-453 MuiButton-raisedPrimary-454 MuiButton-disabled-459 MuiButton-fullWidth-464\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-465 MuiButton-root-439 MuiButton-contained-450 MuiButton-containedPrimary-451 MuiButton-raised-453 MuiButton-raisedPrimary-454 MuiButton-fullWidth-464\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-440\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-476\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -409,16 +409,16 @@
                              class=\\"MuiSelect-select-399 MuiSelect-selectMenu-402 MuiInputBase-input-428 MuiInput-input-413\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-362 MuiSelect-icon-404\\"
                              focusable=\\"false\\"
@@ -660,12 +660,67 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-561 Alert-common-553\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-554 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-362 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-555 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -689,23 +744,21 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-465 MuiButton-root-439 MuiButton-contained-450 MuiButton-containedPrimary-451 MuiButton-raised-453 MuiButton-raisedPrimary-454 MuiButton-fullWidth-464\\"
+               class=\\"MuiButtonBase-root-465 MuiButtonBase-disabled-466 MuiButton-root-439 MuiButton-contained-450 MuiButton-containedPrimary-451 MuiButton-raised-453 MuiButton-raisedPrimary-454 MuiButton-disabled-459 MuiButton-fullWidth-464\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-440\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-476\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -269,24 +269,23 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                     class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-964\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiInputBase-input-994 MuiInput-input-979\\"
+                         class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiSelect-disabled-969 MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
-                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -395,23 +394,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                        >
                          <div
                            class=\\"MuiSelect-root-964\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiInputBase-input-994 MuiInput-input-979\\"
+                             class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiSelect-disabled-969 MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -467,25 +465,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-942 MuiFormControl-fullWidth-945\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-957 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
+                         class=\\"MuiFormLabel-root-957 MuiFormLabel-disabled-959 MuiInputLabel-disabled-948 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972 MuiInputBase-multiline-992 MuiInput-multiline-977\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972 MuiInputBase-multiline-992 MuiInput-multiline-977\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-inputMultiline-996 MuiInput-inputMultiline-981\\"
+                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-inputMultiline-996 MuiInput-inputMultiline-981\\"
+                           disabled=\\"\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -497,25 +496,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-942 MuiFormControl-fullWidth-945\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-957 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
+                         class=\\"MuiFormLabel-root-957 MuiFormLabel-disabled-959 MuiInputLabel-disabled-948 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-994 MuiInput-input-979\\"
+                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -572,11 +572,11 @@
                          <div
                            id=\\"FileUploadDropZone\\"
                            tabindex=\\"0\\"
                          >
                            <div
-                             aria-disabled=\\"false\\"
+                             aria-disabled=\\"true\\"
                              class=\\"\\"
                              style=\\"position: relative; padding: 0px;\\"
                            >
                              <div
                                class=\\"MuiGrid-container-569 FileUploadDropzoneStaticContent-dropzone-1115\\"
@@ -646,10 +646,11 @@
                                </div>
                              </div>
                              <input
                                aria-label=\\"Upload files\\"
                                autocomplete=\\"off\\"
+                               disabled=\\"\\"
                                id=\\"Uploader\\"
                                multiple=\\"\\"
                                style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                                type=\\"file\\"
                              />
@@ -660,52 +661,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-570 MuiGrid-grid-xs-12-609\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-569 MuiGrid-spacing-xs-24-593 MuiGrid-align-items-xs-flex-start-578 MuiGrid-align-content-xs-center-581 MuiGrid-justify-xs-center-586 Alert-info_outline-1131 Alert-common-1119\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-570 MuiGrid-grid-xs-12-609 MuiGrid-grid-sm-true-611\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-569 MuiGrid-align-items-xs-flex-start-578 MuiGrid-align-content-xs-center-581 MuiGrid-justify-xs-center-586\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-570 Alert-icon-1120 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1133 MuiCircularProgress-colorPrimary-1136 MuiCircularProgress-indeterminate-1135 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1138\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1139 MuiCircularProgress-circleIndeterminate-1141\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-570 MuiGrid-grid-xs-true-597 Alert-text-1121 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Request is being processed.
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-569 MuiGrid-spacing-xs-24-593\\"
          >
            <div
              class=\\"MuiGrid-item-570 MuiGrid-grid-xs-true-597\\"
            />
            <div
              class=\\"MuiGrid-item-570\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1031 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-raised-1019 MuiButton-fullWidth-1030\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1031 MuiButtonBase-disabled-1032 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-raised-1019 MuiButton-disabled-1025 MuiButton-fullWidth-1030\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1006\\"
                >
                  Cancel
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1042\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-570\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1031 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-containedPrimary-1017 MuiButton-raised-1019 MuiButton-raisedPrimary-1020 MuiButton-fullWidth-1030\\"
+               class=\\"MuiButtonBase-root-1031 MuiButtonBase-disabled-1032 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-containedPrimary-1017 MuiButton-raised-1019 MuiButton-raisedPrimary-1020 MuiButton-disabled-1025 MuiButton-fullWidth-1030\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1006\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1042\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -269,23 +269,24 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                     class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-964\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiSelect-disabled-969 MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
+                         class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiInputBase-input-994 MuiInput-input-979\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -309,11 +310,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-570 MuiGrid-grid-xs-12-609\\"
            >
              <div
                class=\\"MuiPaper-root-880 MuiPaper-elevation1-883 MuiPaper-rounded-881 MuiCard-root-879 Cards-card-874 StandardCard\\"
@@ -394,22 +395,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                        >
                          <div
                            class=\\"MuiSelect-root-964\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiSelect-disabled-969 MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
+                             class=\\"MuiSelect-select-965 MuiSelect-selectMenu-968 MuiInputBase-input-994 MuiInput-input-979\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -465,26 +467,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-942 MuiFormControl-fullWidth-945\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-957 MuiFormLabel-disabled-959 MuiInputLabel-disabled-948 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
+                         class=\\"MuiFormLabel-root-957 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972 MuiInputBase-multiline-992 MuiInput-multiline-977\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972 MuiInputBase-multiline-992 MuiInput-multiline-977\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-inputMultiline-996 MuiInput-inputMultiline-981\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-inputMultiline-996 MuiInput-inputMultiline-981\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -496,26 +497,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-942 MuiFormControl-fullWidth-945\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-957 MuiFormLabel-disabled-959 MuiInputLabel-disabled-948 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
+                         class=\\"MuiFormLabel-root-957 MuiInputLabel-root-946 MuiInputLabel-formControl-951 MuiInputLabel-animated-954\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-disabled-987 MuiInput-disabled-974 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
+                         class=\\"MuiInputBase-root-984 MuiInput-root-971 MuiInput-underline-975 MuiInputBase-fullWidth-993 MuiInput-fullWidth-978 MuiInputBase-formControl-985 MuiInput-formControl-972\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-994 MuiInput-input-979 MuiInputBase-disabled-987 MuiInput-disabled-974\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-994 MuiInput-input-979\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -572,11 +572,11 @@
                          <div
                            id=\\"FileUploadDropZone\\"
                            tabindex=\\"0\\"
                          >
                            <div
-                             aria-disabled=\\"true\\"
+                             aria-disabled=\\"false\\"
                              class=\\"\\"
                              style=\\"position: relative; padding: 0px;\\"
                            >
                              <div
                                class=\\"MuiGrid-container-569 FileUploadDropzoneStaticContent-dropzone-1115\\"
@@ -646,11 +646,10 @@
                                </div>
                              </div>
                              <input
                                aria-label=\\"Upload files\\"
                                autocomplete=\\"off\\"
-                               disabled=\\"\\"
                                id=\\"Uploader\\"
                                multiple=\\"\\"
                                style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                                type=\\"file\\"
                              />
@@ -669,48 +668,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-569 MuiGrid-spacing-xs-24-593 MuiGrid-align-items-xs-flex-start-578 MuiGrid-align-content-xs-center-581 MuiGrid-justify-xs-center-586 Alert-info_outline-1131 Alert-common-1119\\"
+                 class=\\"MuiGrid-container-569 MuiGrid-spacing-xs-24-593 MuiGrid-align-items-xs-flex-start-578 MuiGrid-align-content-xs-center-581 MuiGrid-justify-xs-center-586 Alert-done-1156 Alert-common-1143\\"
                >
                  <div
                    class=\\"MuiGrid-item-570 MuiGrid-grid-xs-12-609 MuiGrid-grid-sm-true-611\\"
                  >
                    <div
                      class=\\"MuiGrid-container-569 MuiGrid-align-items-xs-flex-start-578 MuiGrid-align-content-xs-center-581 MuiGrid-justify-xs-center-586\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-570 Alert-icon-1120 alert-icon\\"
                    >
                      <div
-                         class=\\"MuiCircularProgress-root-1133 MuiCircularProgress-colorPrimary-1136 MuiCircularProgress-indeterminate-1135 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
+                       class=\\"MuiGrid-item-570 Alert-icon-1144 alert-icon\\"
                      >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1138\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-928 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1139 MuiCircularProgress-circleIndeterminate-1141\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
                          />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
+                         />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-570 MuiGrid-grid-xs-true-597 Alert-text-1121 alert-text\\"
+                       class=\\"MuiGrid-item-570 MuiGrid-grid-xs-true-597 Alert-text-1145 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Request is being processed.
+                       Fix record request has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -724,37 +719,41 @@
            />
            <div
              class=\\"MuiGrid-item-570\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1031 MuiButtonBase-disabled-1032 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-raised-1019 MuiButton-disabled-1025 MuiButton-fullWidth-1030\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1031 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-raised-1019 MuiButton-fullWidth-1030\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1006\\"
                >
                  Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1042\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-570\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1031 MuiButtonBase-disabled-1032 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-containedPrimary-1017 MuiButton-raised-1019 MuiButton-raisedPrimary-1020 MuiButton-disabled-1025 MuiButton-fullWidth-1030\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1031 MuiButton-root-1005 MuiButton-contained-1016 MuiButton-containedPrimary-1017 MuiButton-raised-1019 MuiButton-raisedPrimary-1020 MuiButton-fullWidth-1030\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1006\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1042\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
